7.x-1.14.x
----------
 - #1975 Add landingPage to data.json feed.
 - #1967 Added search title to /search panels.
 - #1997 Recline.view.nvd3.js: Fixed tooltips that were not being displayed when using some percentage formats.
 - #1988 Count and delete resources on Harvest source deletion.
 - #1951 Fixed display of number of Groups a user belongs to on the user profile page.
 - #1968 Fixed "Reset" button on search page to also resets facets.
 - #1985 Add documentation for resource behavior on harvested datasets.
 - #1907 Added back TAB delimiter option for datastore imports.
 - #1955 Update ahoy docker tooling for local environment usecase.
 - #1903 Add support for tab-delimited files (TSV) in resources/recline preview.
 - #2001 Improve REST API documentation.
 - #1991 Fix host IP replacement on script used to recconect the MySQL container. 
 - #1942 DevOps: Restore drush commands to deal with orphaned resources.
 - #1943 Update tests to be more compatible with client sites, multiple testing and devops improvements.
 - #1962 Recline.view.nvd3.js: Fixed display of data with zero as values.
 - #1888 Added validation on axis tick settings on visualization_entity.
 - #1725 Fix `ahoy dkan uli` output login link.
 - #1881 Fix yaml syntaxt to make it standard. 
 - #1853 Update chart documentation.
 - #1839 Add help text and improve UI on the chart form for better clarity.
 - #1827 Remove option to import TABed CSV files into datastore. 
 - #1807 Add admin_views module for enhanced content and file filtering.
 - #1990 DevOps: Automatically populate required fields when running behat tests. 
 - #1938 DevOps: Allow behat tests to be skipped in circle.
 - #1842 Add help text to explain the pager on data previews.

7.x-1.13.5 2017-07-14
---------------------
 - #2003 Fix dkan_bueditor_markdown_install(), which was using a variable before it was initialized.
 - #2003 Fix to dkan_update_7016, which assumed the bueditor ID was always '5' and failed when it was not.