@@ -209,6 +209,32 @@ function dkan_harvest_field_default_field_bases() {
     'type' => 'text',
   );
 
+  // Exported field_base: 'field_dkan_harvest_topic'.
+  $field_bases['field_dkan_harvest_topic'] = array(
+    'active' => 1,
+    'cardinality' => -1,
+    'deleted' => 0,
+    'entity_types' => array(),
+    'field_name' => 'field_dkan_harvest_topic',
+    'indexes' => array(
+      'tid' => array(
+        0 => 'tid',
+      ),
+    ),
+    'locked' => 0,
+    'module' => 'taxonomy',
+    'settings' => array(
+      'allowed_values' => array(
+        0 => array(
+          'vocabulary' => 'dkan_topics',
+          'parent' => 0,
+        ),
+      ),
+    ),
+    'translatable' => 0,
+    'type' => 'taxonomy_term_reference',
+  );
+
   // Exported field_base: 'field_orphan'.
   $field_bases['field_orphan'] = array(
     'active' => 1,
