@@ -6,6 +6,7 @@ dependencies[] = better_exposed_filters
 dependencies[] = ctools
 dependencies[] = dkan_dataset_content_types
 dependencies[] = dkan_migrate_base
+dependencies[] = dkan_topics
 dependencies[] = double_field
 dependencies[] = entity
 dependencies[] = features
@@ -30,7 +31,9 @@ features[field_base][] = field_dkan_harvest_filters
 features[field_base][] = field_dkan_harvest_machine_name
 features[field_base][] = field_dkan_harvest_overrides
 features[field_base][] = field_dkan_harvest_source_uri
+features[field_base][] = field_dkan_harvest_topic
 features[field_base][] = field_orphan
+features[field_instance][] = node-dataset-field_orphan
 features[field_instance][] = node-harvest_source-body
 features[field_instance][] = node-harvest_source-field_dkan_harveset_type
 features[field_instance][] = node-harvest_source-field_dkan_harvest_defaults
@@ -39,7 +42,7 @@ features[field_instance][] = node-harvest_source-field_dkan_harvest_filters
 features[field_instance][] = node-harvest_source-field_dkan_harvest_machine_name
 features[field_instance][] = node-harvest_source-field_dkan_harvest_overrides
 features[field_instance][] = node-harvest_source-field_dkan_harvest_source_uri
-features[field_instance][] = node-dataset-field_orphan
+features[field_instance][] = node-harvest_source-field_dkan_harvest_topic
 features[field_instance][] = node-resource-field_orphan
 features[node][] = harvest_source
 features[path_breadcrumbs][] = harvest_source
